Fixes issues with scrolling not showing bottom, and turns off horizontal scrolling

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,6 +36,8 @@ $btnPrimaryBackground: #e64500;
 body {
   @extend .container;
   padding-top: 100px;
+  padding-bottom: 50px;
+  overflow-x: hidden;
 }
 
 header {
